--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "17.0.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
+    "socket.io-client": "^3.1.2",
     "styled-components": "^5.2.1",
     "swr": "^0.4.2"
   },
