--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "env-cmd": "^10.1.0",
     "next": "10.0.7",
+    "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
+    "redux-actions": "^2.6.5",
+    "redux-thunk": "^2.3.0",
     "socket.io-client": "^3.1.2",
     "styled-components": "^5.2.1",
     "swr": "^0.4.2"
